--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
 
     <style>
 
+      @font-face {
+        font-family: Exo2;
+        src: url("font/Exo2-SemiBold.ttf");
+      }
+
       h1 {
-        font-family: Lilita One;
+        font-family: Exo2;
       }
 
       a {
-        font-family: Lilita One;
+        font-family: Exo2;
       }
 
     </style>
