--- a/builderRats5x3.html
+++ b/builderRats5x3.html
@@ -68,13 +68,12 @@
           #ratsIMG {
             border: 5px solid black;
             padding: 1em;
-            padding-bottom: 4em;
             margin: 0.75em;
             margin-left: 5em;
             margin-top: 2em;
           }
 
-          #bossMotherRat, #pretender, #screamer, #soldier {
+          #bossMotherRat, #pretender, #screamer {
             padding-bottom: 1em;
           }
 
@@ -182,6 +181,7 @@
         </div>
 
         <h1 id="front">Front (side facing your army)</h1>
+        <h1 id="front">Your army is positioned here</h1>
 
       </div>
 
@@ -190,19 +190,19 @@
         <div id="ratsIMG">
 
           <div id="bossMotherRat">
-            <img id="drag1" src="rats/rat_boss_motherrat_front.png" draggable="true" ondragstart="drag(event)" width="75" height="75">
+            <img id="drag1" src="rats/rat_boss_motherrat_front.png" draggable="true" ondragstart="drag(event)" width="75">
           </div>
 
           <div id="pretender">
-            <img id="drag2" src="rats/rat_pretender_front.png" draggable="true" ondragstart="drag(event)" width="75" height="75">
+            <img id="drag2" src="rats/rat_pretender_front.png" draggable="true" ondragstart="drag(event)" width="75">
           </div>
 
           <div id="screamer">
-            <img id="drag3" src="rats/rat_screamer_front.png" draggable="true" ondragstart="drag(event)" width="75" height="75">
+            <img id="drag3" src="rats/rat_screamer_front.png" draggable="true" ondragstart="drag(event)" width="75">
           </div>
 
           <div id="soldier">
-            <img id="drag4" src="rats/rat_soldier_front.png" draggable="true" ondragstart="drag(event)" width="75" height="75">
+            <img id="drag4" src="rats/rat_soldier_front.png" draggable="true" ondragstart="drag(event)" width="75">
           </div>
 
         </div>
