--- a/index.html
+++ b/index.html
@@ -11,10 +11,17 @@
 
       h1 {
         font-family: Exo2;
+        font-size: 4em;
+      }
+
+      h2 {
+        font-family: Exo2;
+        font-size: 3em;
       }
 
       a {
         font-family: Exo2;
+        font-size: 2em;
       }
 
     </style>
@@ -31,6 +38,27 @@
     <br>
 
     <a href="builderRaiders.html">Click here to build a Raiders Layout</a>
+
+    <h2>Rats:</h2>
+
+    <img id="bossMotherRat" src="rats/rat_boss_motherrat_front.png" height="100">
+    <img id="pretender" src="rats/rat_pretender_front.png" height="100">
+    <img id="screamer" src="rats/rat_screamer_front.png" height="100">
+    <img id="soldier" src="rats/rat_soldier_front.png" height="100">
+
+    <h2>Raiders:</h2>
+
+      <img id="bossBoomerang" src="raiders/raider_boss_boomerang_front.png" height="100">
+      <img id="bossDeadEye" src="raiders/raider_boss_deadeye_front.png" height="100">
+      <img id="bossPoacher" src="raiders/raider_boss_poacher_front.png" height="100">
+      <img id="cannonRider" src="raiders/raider_cannonrider_front.png" height="100">
+      <img id="knifeThrower" src="raiders/raider_knifethrower_front.png" height="100">
+      <img id="musketeer" src="raiders/raider_musketeer_front.png" height="100">
+      <img id="oneEyeSniper" src="raiders/raider_oneeye_sniper_front.png" height="100">
+      <img id="rampart" src="raiders/raider_rampart_front.png" height="100">
+      <img id="rhinoRider" src="raiders/raider_rhinorider_front.png" height="100">
+      <img id="skullCrusher" src="raiders/raider_skullcrusher_front.png" height="100">
+
 
   </body>
 
