--- a/builderRaiders.html
+++ b/builderRaiders.html
@@ -36,9 +36,9 @@
 
     <h2>Choose a Layout:</h2>
 
-    <a href="builderRaiders3x3.html"> <img id="three" src="/otherIMG/3x3.png" height="250"></a>
+    <a href="builderRaiders3x3.html"> <img id="three" src="/otherIMG/three.png" height="250"></a>
 
-    <a href="builderRaiders5x3.html"> <img id="five" src="/otherIMG/5x3.png" height="250"></a>
+    <a href="builderRaiders5x3.html"> <img id="five" src="/otherIMG/five.png" height="250"></a>
 
   </body>
 
