--- a/builderRats5x3.html
+++ b/builderRats5x3.html
@@ -235,8 +235,8 @@
 
         <div id="paragraphs">
 
-          <h2>You can 'Drag and Drop' a unit from the centre list directly into the bin, causing it to be removed from the centre list. <br> 'Drag and Drop' doesn't work on some browsers (mostly mobile and outdated browsers). <br> It has been tested and works correctly on: <br> - Google Chrome <br> - Microsoft Edge <br> - Safari on iPadOS <br> It has been tested and doesn't work on: <br> - Internet Explorer <br> - Safari on iOS <br> - Chrome for iOS <br> - Firefox for iOS</h2>
-
+          <h2>You can 'Drag and Drop' a unit from the centre list directly into the bin, causing it to be removed from the centre list. <br> It isn't necessarily 'mobile optimised', however you should still be able to create layouts on mobile. <br> 'Drag and Drop' doesn't work on some browsers (mostly outdated browsers). <br> It has been tested and works correctly on: <br> - Google Chrome <br> - Microsoft Edge <br> - Safari on iPadOS <br> - Safari on iOS <br> - Chrome for iOS <br> - Edge for iOS <br> - Firefox for iOS <br> It has been tested and doesn't work on: <br> - Internet Explorer </h2>
+          
         </div>
 
       </div>
