--- a/builderOutcasts.html
+++ b/builderOutcasts.html
@@ -36,13 +36,13 @@
 
   <body>
 
-    <h1>Frontier Chronicles Enemy Layout Builder - Raiders</h1>
+    <h1>Frontier Chronicles Enemy Layout Builder - Outcasts</h1>
 
     <h2>Choose a Layout:</h2>
 
-    <a href="builderRaiders3x3.html"> <img id="three" src="otherIMG/three.png" height="250"></a>
+    <a href="builderOutcasts3x3.html"> <img id="three" src="otherIMG/three.png" height="250"></a>
 
-    <a href="builderRaiders5x3.html"> <img id="five" src="otherIMG/five.png" height="250"></a>
+    <a href="builderOutcasts5x3.html"> <img id="five" src="otherIMG/five.png" height="250"></a>
 
   </body>
 
