--- a/builderOutcasts3x3.html
+++ b/builderOutcasts3x3.html
@@ -75,7 +75,7 @@
               overflow-y: scroll;
             }
 
-            #bossBoomerang, #bossDeadEye, #bossPoacher, #cannonRider, #knifeThrower, #musketeer, #oneEyeSniper, #rampart, #rhinoRider, #skullCrusher, #explosive, #hostage, #stones {
+            #corpsGun, #howitzer, #regimentalHowitzer, #bazooka, #gunner, #shieldtrooper, #sniper, #trooper, #tankLight, #tankMiddle, #oustin, #explosive, #hostage, #stones {
               padding-bottom: 1em;
             }
 
@@ -118,7 +118,7 @@
 
         <script>
 
-        var num = 15;
+        var num = 16;
 
         function allowDrop(ev) {
           ev.preventDefault();
@@ -133,11 +133,11 @@
           if(ev.target.children.length === 0) {
             var data = ev.dataTransfer.getData("div");
 
-            if (data == "drag2") {
+            if (data == "drag11") {
               var placedTile = ev.target.id
 
               if (placedTile.startsWith("b")) {
-                window.alert("This Raider takes up a 1x2 tile area, so it can only be placed on the Middle or Top row. If you'd like to use it, please place it on those rows.");
+                window.alert("This Vehicle takes up a 1x2 tile area, so it can only be placed on the Middle or Top row. If you'd like to use it, please place it on those rows.");
                 return
               }
               if (placedTile.startsWith("m")) {
@@ -161,13 +161,83 @@
                 playAlert("tink")
                 num++;
 
-                window.alert("This Raider takes up a 1x2 tile area, hence it has been placed below this tile too. If you need to remove this Raider, you'll need to drag both of them to the Bin.");
+                window.alert("This Vehicle takes up a 1x2 tile area, hence it has been placed below this tile too. If you need to remove this Vehicle, you'll need to drag both of them to the Bin.");
               }
 
               else {
-                window.alert("This Raider takes up a 1x2 tile area, but there is another Raider placed below the tile you are trying to place this Raider in. Please drag the Raider below this tile to the Bin, and try placing it again. (If the Raider below this tile is also one that takes up multiple tiles, please drag both of them to the bin)");
+                window.alert("This Vehicle takes up a 1x2 tile area, but there is another Outcast placed below the tile you are trying to place this Vehicle in. Please drag the Outcast below this tile to the Bin, and try placing it again. (If the Outcast below this tile is also one that takes up multiple tiles, please drag all of them to the bin)");
               }
             }
+
+            else if (data == "drag9" || data == "drag10") {
+              var placedTile = ev.target.id
+
+              if (placedTile.startsWith("b")) {
+                window.alert("This Tank takes up a 2x2 tile area, so it can only be placed on the Middle or Top row, and not in the right-hand-most column. If you'd like to use it, please place it on those rows.");
+                return
+              }
+              if (placedTile.startsWith("m")) {
+                var placedTileNum = placedTile.substr(-1);
+                var placedTileNum = parseInt(placedTileNum);
+                var placedTileNumRight = placedTileNum + 1
+                var dupTileDown = placedTile.replace("m", "b");
+                var dupTileRight = placedTile.replace(placedTileNum, placedTileNumRight);
+                var dupTileRightDown = placedTile.replace("m", "b");
+                var dupTileRightDown = dupTileRightDown.replace(placedTileNum, placedTileNumRight);
+              }
+              if (placedTile.startsWith("t")) {
+                var placedTileNum = placedTile.substr(-1);
+                var placedTileNum = parseInt(placedTileNum);
+                var placedTileNumRight = placedTileNum + 1
+                var dupTileDown = placedTile.replace("t", "m");
+                var dupTileRight = placedTile.replace(placedTileNum, placedTileNumRight);
+                var dupTileRightDown = placedTile.replace("t", "m");
+                var dupTileRightDown = dupTileRightDown.replace(placedTileNum, placedTileNumRight);
+              }
+
+              var dupTileDownPlace = document.getElementById(dupTileDown);
+              var dupTileRightPlace = document.getElementById(dupTileRight);
+              var dupTileRightDownPlace = document.getElementById(dupTileRightDown);
+
+              if (placedTile == "t3" || placedTile == "m3") {
+                window.alert("This Tank takes up a 2x2 tile area, but you have tried placing it on the right-hand-most column, so it cannot fit here. Please try placing it again elsewhere, not on the right-hand-most column.");
+              }
+
+              else {
+                if (dupTileDownPlace.innerHTML === "" && dupTileRightPlace.innerHTML === "" && dupTileRightDownPlace.innerHTML === "") {
+                  var nodeCopy = document.getElementById(data).cloneNode(true);
+                  nodeCopy.id = "dragged" + num;
+                  ev.target.appendChild(nodeCopy);
+                  num++;
+
+                  var nodeCopy = document.getElementById(data).cloneNode(true);
+                  nodeCopy.id = "dragged" + num;
+                  dupTileDownPlace.appendChild(nodeCopy);
+                  playAlert("tink")
+                  num++;
+
+                  var nodeCopy = document.getElementById(data).cloneNode(true);
+                  nodeCopy.id = "dragged" + num;
+                  dupTileRightPlace.appendChild(nodeCopy);
+                  playAlert("tink")
+                  num++;
+
+                  var nodeCopy = document.getElementById(data).cloneNode(true);
+                  nodeCopy.id = "dragged" + num;
+                  dupTileRightDownPlace.appendChild(nodeCopy);
+                  playAlert("tink")
+                  num++;
+
+                  window.alert("This Tank takes up a 2x2 tile area, hence it has been placed below this tile, to the right, and to the right down diagonally too. If you need to remove this Tank, you'll need to drag all four of them to the Bin.");
+                }
+
+                else {
+                  window.alert("This Tank takes up a 2x2 tile area, but there is another Outcast placed below, to the right of, or diagonally below and right of the tile you are trying to place this Tank in. Please drag the Outcast(s) in the way to the Bin, and try placing it again. (If the Outcast below this tile is also one that takes up multiple tiles, please drag all of them to the bin)");
+                }
+              }
+
+            }
+
             else {
               var nodeCopy = document.getElementById(data).cloneNode(true);
               nodeCopy.id = "dragged" + num;
@@ -235,60 +305,64 @@
 
         <div id="ratsIMG">
 
-          <div id="bossBoomerang">
-            <img id="drag1" src="raiders/raider_boss_boomerang_front.png" draggable="true" ondragstart="drag(event)" width="75">
+          <div id="corpsGun">
+            <img id="drag1" src="player/Artillery/artillery_corps_gun_front.png" draggable="true" ondragstart="drag(event)" width="75">
           </div>
 
-          <div id="bossDeadEye">
-            <img id="drag2" src="raiders/raider_boss_deadeye_front.png" draggable="true" ondragstart="drag(event)" width="75">
+          <div id="howitzer">
+            <img id="drag2" src="player/Artillery/artillery_howitzer_front.png" draggable="true" ondragstart="drag(event)" width="75">
           </div>
 
-          <div id="bossPoacher">
-            <img id="drag3" src="raiders/raider_boss_poacher_front.png" draggable="true" ondragstart="drag(event)" width="75">
+          <div id="regimentalHowitzer">
+            <img id="drag3" src="player/Artillery/artillery_regimental_howitzer_front.png" draggable="true" ondragstart="drag(event)" width="75">
           </div>
 
-          <div id="cannonRider">
-            <img id="drag4" src="raiders/raider_cannonrider_front.png" draggable="true" ondragstart="drag(event)" width="75">
+          <div id="bazooka">
+            <img id="drag4" src="player/Soldiers/bazooka_front.png" draggable="true" ondragstart="drag(event)" width="75">
           </div>
 
-          <div id="knifeThrower">
-            <img id="drag5" src="raiders/raider_knifethrower_front.png" draggable="true" ondragstart="drag(event)" width="75">
+          <div id="gunner">
+            <img id="drag5" src="player/Soldiers/gunner_front.png" draggable="true" ondragstart="drag(event)" width="75">
           </div>
 
-          <div id="musketeer">
-            <img id="drag6" src="raiders/raider_musketeer_front.png" draggable="true" ondragstart="drag(event)" width="75">
+          <div id="shieldtrooper">
+            <img id="drag6" src="player/Soldiers/shieldtrooper_front.png" draggable="true" ondragstart="drag(event)" width="75">
           </div>
 
-          <div id="oneEyeSniper">
-            <img id="drag7" src="raiders/raider_oneeye_sniper_front.png" draggable="true" ondragstart="drag(event)" width="75">
+          <div id="sniper">
+            <img id="drag7" src="player/Soldiers/sniper_front.png" draggable="true" ondragstart="drag(event)" width="75">
           </div>
 
-          <div id="rampart">
-            <img id="drag8" src="raiders/raider_rampart_front.png" draggable="true" ondragstart="drag(event)" width="75">
+          <div id="trooper">
+            <img id="drag8" src="player/Soldiers/trooper_front.png" draggable="true" ondragstart="drag(event)" width="75">
           </div>
 
-          <div id="rhinoRider">
-            <img id="drag9" src="raiders/raider_rhinorider_front.png" draggable="true" ondragstart="drag(event)" width="75">
+          <div id="tankLight">
+            <img id="drag9" src="player/Vehicles/tank_light_front.png" draggable="true" ondragstart="drag(event)" width="75">
           </div>
 
-          <div id="skullCrusher">
-            <img id="drag10" src="raiders/raider_skullcrusher_front.png" draggable="true" ondragstart="drag(event)" width="75">
+          <div id="tankMiddle">
+            <img id="drag10" src="player/Vehicles/tank_middle_front.png" draggable="true" ondragstart="drag(event)" width="75">
+          </div>
+
+          <div id="oustin">
+            <img id="drag11" src="player/Vehicles/teh_oustin_front.png" draggable="true" ondragstart="drag(event)" width="75">
           </div>
 
           <div id="explosive">
-            <img id="drag11" src="player/Objects/explosive_000.png" draggable="true" ondragstart="drag(event)" width="75">
+            <img id="drag12" src="player/Objects/explosive_000.png" draggable="true" ondragstart="drag(event)" width="75">
           </div>
 
           <div id="hostage">
-            <img id="drag12" src="player/Objects/hostage_000.png" draggable="true" ondragstart="drag(event)" width="75">
+            <img id="drag13" src="player/Objects/hostage_000.png" draggable="true" ondragstart="drag(event)" width="75">
           </div>
 
           <div id="stones">
-            <img id="drag13" src="player/Objects/stones_00.png" draggable="true" ondragstart="drag(event)" width="75">
+            <img id="drag14" src="player/Objects/stones_00.png" draggable="true" ondragstart="drag(event)" width="75">
           </div>
 
           <div id="treelog">
-            <img id="drag14" src="player/Objects/treelog_00.png" draggable="true" ondragstart="drag(event)" width="75">
+            <img id="drag15" src="player/Objects/treelog_00.png" draggable="true" ondragstart="drag(event)" width="75">
           </div>
 
         </div>
@@ -309,7 +383,7 @@
 
         <div id="paragraphs">
 
-          <h2>'Drag and Drop' the units from the box in the centre to the boxes on the left. <br> To remove a unit from a box on the left, 'Drag and Drop' the unit into the bin in the centre. <br> Once you are happy with your layout, please screenshot it and send it in #raiders-layouts in the Frontier Chronicles Discord server.</h2>
+          <h2>'Drag and Drop' the units from the box in the centre to the boxes on the left. <br> To remove a unit from a box on the left, 'Drag and Drop' the unit into the bin in the centre. <br> Once you are happy with your layout, please screenshot it and send it in #outcasts-layouts in the Frontier Chronicles Discord server.</h2>
 
         </div>
 
