--- a/builderRats.html
+++ b/builderRats.html
@@ -25,6 +25,10 @@
         border: 5px solid black;
       }
 
+      html {
+        padding-bottom: 3em;
+      }
+
     </style>
 
   </head>
@@ -36,9 +40,9 @@
 
     <h2>Choose a Layout:</h2>
 
-    <a href="builderRats3x3.html"> <img id="three" src="./otherIMG/three.png" height="250"></a>
+    <a href="builderRats3x3.html"> <img id="three" src="otherIMG/three.png" height="250"></a>
 
-    <a href="builderRats3x3.html"> <img id="five" src="./otherIMG/five.png" height="250"></a>
+    <a href="builderRats5x3.html"> <img id="five" src="otherIMG/five.png" height="250"></a>
 
   </body>
 
