--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
         font-size: 2em;
       }
 
+      html {
+        padding-bottom: 3em;
+      }
+
     </style>
 
   </head>
@@ -39,6 +43,10 @@
 
     <a href="builderRaiders.html">Click here to build a Raiders Layout</a>
 
+    <br>
+
+    <a href="builderOutcasts.html">Click here to build an Outcasts Layout</a>
+
     <h2>Rats:</h2>
 
     <img id="bossMotherRat" src="rats/rat_boss_motherrat_front.png" height="100">
@@ -48,17 +56,37 @@
 
     <h2>Raiders:</h2>
 
-      <img id="bossBoomerang" src="raiders/raider_boss_boomerang_front.png" height="100">
-      <img id="bossDeadEye" src="raiders/raider_boss_deadeye_front.png" height="100">
-      <img id="bossPoacher" src="raiders/raider_boss_poacher_front.png" height="100">
-      <img id="cannonRider" src="raiders/raider_cannonrider_front.png" height="100">
-      <img id="knifeThrower" src="raiders/raider_knifethrower_front.png" height="100">
-      <img id="musketeer" src="raiders/raider_musketeer_front.png" height="100">
-      <img id="oneEyeSniper" src="raiders/raider_oneeye_sniper_front.png" height="100">
-      <img id="rampart" src="raiders/raider_rampart_front.png" height="100">
-      <img id="rhinoRider" src="raiders/raider_rhinorider_front.png" height="100">
-      <img id="skullCrusher" src="raiders/raider_skullcrusher_front.png" height="100">
+    <img id="bossBoomerang" src="raiders/raider_boss_boomerang_front.png" height="100">
+    <img id="bossDeadEye" src="raiders/raider_boss_deadeye_front.png" height="100">
+    <img id="bossPoacher" src="raiders/raider_boss_poacher_front.png" height="100">
+    <img id="cannonRider" src="raiders/raider_cannonrider_front.png" height="100">
+    <img id="knifeThrower" src="raiders/raider_knifethrower_front.png" height="100">
+    <img id="musketeer" src="raiders/raider_musketeer_front.png" height="100">
+    <img id="oneEyeSniper" src="raiders/raider_oneeye_sniper_front.png" height="100">
+    <img id="rampart" src="raiders/raider_rampart_front.png" height="100">
+    <img id="rhinoRider" src="raiders/raider_rhinorider_front.png" height="100">
+    <img id="skullCrusher" src="raiders/raider_skullcrusher_front.png" height="100">
 
+    <h2>Outcasts:</h2>
+
+    <img id="corpsGun" src="player/Artillery/artillery_corps_gun_front.png" height="100">
+    <img id="howitzer" src="player/Artillery/artillery_howitzer_front.png" height="100">
+    <img id="regimentalHowitzer" src="player/Artillery/artillery_regimental_howitzer_front.png" height="100">
+    <img id="bazooka" src="player/Soldiers/bazooka_front.png" height="100">
+    <img id="gunner" src="player/Soldiers/gunner_front.png" height="100">
+    <img id="shieldtrooper" src="player/Soldiers/shieldtrooper_front.png" height="100">
+    <img id="sniper" src="player/Soldiers/sniper_front.png" height="100">
+    <img id="trooper" src="player/Soldiers/trooper_front.png" height="100">
+    <img id="tankLight" src="player/Vehicles/tank_light_front.png" height="100">
+    <img id="tankMiddle" src="player/Vehicles/tank_middle_front.png" height="100">
+    <img id="oustin" src="player/Vehicles/teh_oustin_front.png" height="100">
+
+    <h2>Objects Available on ALL Layouts:</h2>
+
+    <img id="explosive" src="player/Objects/explosive_000.png" height="100">
+    <img id="hostage" src="player/Objects/hostage_000.png" height="100">
+    <img id="stones" src="player/Objects/stones_00.png" height="100">
+    <img id="treelog" src="player/Objects/treelog_00.png" height="100">
 
   </body>
 
