--- a/builderOutcasts3x3.html
+++ b/builderOutcasts3x3.html
@@ -232,7 +232,7 @@
                 }
 
                 else {
-                  window.alert("This Tank takes up a 2x2 tile area, but there is another Outcast placed below, to the right of, or diagonally below and right of the tile you are trying to place this Tank in. Please drag the Outcast(s) in the way to the Bin, and try placing it again. (If the Outcast below this tile is also one that takes up multiple tiles, please drag all of them to the bin)");
+                  window.alert("This Tank takes up a 2x2 tile area, but there is another Outcast placed below, to the right of, or diagonally below and right of the tile you are trying to place this Tank in. Please drag the Outcast(s) in the way to the Bin, and try placing it again. (If the obstructing Outcast(s) are also ones that takes up multiple tiles, please drag all of them to the bin)");
                 }
               }
 
